src/app/globals.scss
@import "../styles/colors";
@import "../styles/typography";
@import "../styles/variables";

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  background: $color-background;
  font-family: $font-primary;
}

main {
  padding-top: 96px;
  overflow: hidden;
}

.container {
  max-width: 1120px;
  margin: 0 auto;

  @media (max-width: 1180px) {
    padding: 0 40px;
  }

  @media (max-width: 375px) {
    padding: 0 20px;
  }
}

.section {
  display: flex;
  flex-direction: column;
  gap: 48px;
  align-items: flex-start;
  width: 100%;
  margin-bottom: 140px;
  scroll-margin-top: 99px;

  @media (max-width: 1120px) {
    margin-bottom: 64px;
  }

  @media (max-width: 768px) {
    gap: 40px;
  }

  @media (max-width: 420px) {
    margin-bottom: 72px;
  }
}

.h2-heading {
  color: $text-color-secondary;
  font-family: $font-secondary;
  font-size: 56px;
  font-style: normal;
  font-weight: 800;
  line-height: 120%;
  text-transform: uppercase;
  word-wrap: break-word;
  overflow-wrap: break-word;
  word-break: break-word;
  z-index: 2;

  &.white {
    color: $text-color-primary;
  }

  @media (max-width: 768px) {
    font-size: 32px;
    // font-weight: 900;
  }

  @media (max-width: 570px) {
    font-size: 26px;
  }
}

.h3-heading {
  color: $text-color-primary;
  font-family: $font-secondary;
  font-size: 40px;
  font-style: normal;
  font-weight: 800;
  line-height: normal;
  text-transform: uppercase;
  word-wrap: break-word;
  overflow-wrap: break-word;
  word-break: break-word;

  @media (max-width: 768px) {
    font-size: 24px;
    // font-weight: 900;
  }

  @media (max-width: 570px) {
    font-size: 20px;
  }
}

.h4-heading {
  color: $text-color-secondary;
  font-family: $font-secondary;
  font-size: 24px;
  font-style: normal;
  font-weight: 800;
  line-height: normal;
  text-transform: uppercase;
  word-wrap: break-word;
  overflow-wrap: break-word;
  word-break: break-word;

  &.white {
    color: $text-color-primary;
  }

  @media (max-width: 768px) {
    font-size: 18px;
  }
}

.paragraph-text {
  color: $text-color-primary;
  font-family: $font-primary;
  font-size: 20px;
  font-style: normal;
  font-weight: 500;
  line-height: 40px;

  &.black {
    color: $text-color-secondary;
  }

  @media (max-width: 768px) {
    font-size: 18px;
    line-height: 32px;
  }
}

.not-found {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  height: 100vh;
  text-align: center;

  h2 {
    margin-top: 3rem;
    margin-top: auto;
  }

  p {
    font-family: $font-primary;
    color: $text-color-secondary;
    font-size: 28px;
    font-weight: 500;
  }

  button {
    align-self: center;
    margin-bottom: auto;
  }

  @media (max-width: 768px) {
    p {
      font-size: 20px;
      line-height: 26px;
    }
  }
}

